Version 2.7.7dev:

* Added support for WHDLoad 18.2, set as default version.

Version 2.7.6dev:

* Most dialogs are non-modal again.
* Misc user interface updates.

Version 2.7.5dev:

* Remember maximized state.

Version 2.7.4dev:

* Fixed bug when base-dir in config file had a trailing slash.
* Imported updated translations from crowdin.com.

Version 2.7.2dev:

* Fixed /hostgame netplay command (server was started on wrong port).

Version 2.5.41dev:

* Support FS-UAE environment variables in advanced settings.
* Fix appearance settings when theme is set to standard.
* Imported updated translations from crowdin.com.

Version 2.5.40dev:

* New option launcher_font_size.
* Enable screenshot bar for 1280x720 resolution.
* Launcher WHDLoad zip (command line): use A1200 model.

Version 2.5.39dev:
* CD images for database games will now be extracted from archives on demand.
  (there will always be a temp copy made right now, even when not needed).
* If you give the launcher (command line) the path to a zip or lha, it will
  try to find a contained WHDLoad slave and configure an A600 + 8MB fast RAM
  and start FS-UAE.
* Updated Info.plist and specified 10.7.0 as minimum OS X version.
* Added version update check for beta branch.
* Imported updated translations from crowdin.com.

Version 2.5.38dev:

* Updated joystick configuration dialog.
* Save SDL 2.0 GUIDs (and more info) in the controller configurations.
* Configuration dialog: load builtin config if no user config exists.
* Imported updated translations from crowdin.com.

Version 2.5.37dev:

* Fixed bug in login window, added close buttons to login/logout.
* Fixed OAGD.net locker uploader (really, this time).
* Added new logging options panel to settings dialog.
* Imported updated translations from crowdin.com.

Version 2.5.35dev:

* Added All Games / All Configurations to drop-down.
* Nicer behavior when kickstart ROM for chosen model is missing.
* Moved more warnings and information to status bar.