@@ -372,6 +372,9 @@ class FSUAELauncher(ApplicationMixin, fsui.Application):
             path = fsbc.user.get_common_documents_dir()
             path = os.path.join(path, "Amiga Files", "Shared", "rom")
             self.scan_dir_for_kickstarts(path)
+        path = os.path.join(FSGSDirectories.get_base_dir(), "AmigaForever",
+                            "Amiga Files", "Shared", "rom")
+        self.scan_dir_for_kickstarts(path)
 
     @staticmethod
     def scan_dir_for_kickstarts(scan_dir):
