@@ -1,6 +1,6 @@
 import json
 import sqlite3
-from binascii import unhexlify
+from binascii import hexlify, unhexlify
 import zlib
 from .BaseDatabase import BaseDatabase
 
@@ -81,6 +81,26 @@ class GameDatabase(BaseDatabase):
             "INSERT INTO game (id, uuid, data) VALUES (?, ?, ?)",
             (game_id, sqlite3.Binary(DUMMY_UUID), ""))
 
+    def binary_uuid_to_str(self, data):
+        print(data, len(data))
+        s = hexlify(data).decode("ASCII")
+        print(s, len(s))
+        return "{}-{}-{}-{}-{}".format(
+            s[0:8], s[8:12], s[12:16], s[16:20], s[20:32])
+
+    def get_all_uuids(self):
+        cursor = self.internal_cursor()
+        cursor.execute("SELECT uuid FROM game WHERE data IS NOT NULL")
+        result = set()
+        for row in cursor:
+            data = row[0]
+            if len(data) != 16:
+                print("WARNING: Invalid UUID ({} bytes) found: {}".format(
+                      len(data), repr(data)))
+                continue
+            result.add(self.binary_uuid_to_str(data))
+        return result
+
     def get_game_values_for_uuid(self, game_uuid, recursive=True):
         print("get_game_values_for_uuid", game_uuid)
         assert game_uuid
@@ -99,10 +119,16 @@ class GameDatabase(BaseDatabase):
             cursor.execute(
                 "SELECT data FROM game WHERE uuid = ?",
                 (sqlite3.Binary(unhexlify(game_uuid.replace("-", ""))),))
+            row = cursor.fetchone()
+            if not row:
+                raise LookupError("Cannot find game uuid {}".format(game_uuid))
         else:
             cursor.execute(
                 "SELECT data FROM game WHERE id = ?", (game_id,))
-        data = zlib.decompress(cursor.fetchone()[0])
+            row = cursor.fetchone()
+            if not row:
+                raise LookupError("Cannot find game id {}".format(game_id))
+        data = zlib.decompress(row[0])
         data = data.decode("UTF-8")
         doc = json.loads(data)
         next_parent_uuid = doc.get("parent_uuid", "")
