@@ -1,0 +1,1 @@
+DATABASE_AMIGA = "openretro.org/amiga"
