@@ -108,23 +108,6 @@ def render_bottom_bar_screens(item):
     
     texture_rectangle(34, 34, 472, 295, 0.2, *coords)
 
-    # fs_emu_blending(True)
-    # Texture.info_bar.render(0, 0, 1920, 380, opacity=1.0)
-    #
-    # Texture.screen_border_1.render(0, 0, 540, 363, 0.1)
-    # for i in range(4):
-    #     Texture.screen_border_2.render(509 + 345 * i, 0, 376, 261,
-    #             0.11 + 0.01 * i)
-    #
-    # glColor4f(0.7, 0.7, 0.7, 0.7)
-    # #glBindTexture(GL_TEXTURE_2D, Texture.gloss)
-    # Texture.gloss.bind()
-    # for i in range(4):
-    #     texture_rectangle(4 + 539 + 345 * i, 34, 308, 193, 0.3)
-    # texture_rectangle(34, 34, 472, 295, 0.3)
-    #
-    # #if item_index == menu.get_selected_index():
-    # #    State.preview_screen.set_screen(item.get_screen_texture(1))
 
 
 def render_bottom_bar_text(item):
@@ -182,91 +165,3 @@ def render_bottom_bar_text(item):
         Render.text(platform_str, Font.subtitle_font, 1920 - 30 - tw, y, 0, shadow=True,
                     color=color)
     return
-
-    # Render.ortho_perspective()
-    # #render_header(color=(0.5, 0.5, 0.5), text="Ku Game System",
-    # #         offset=header_offset)
-    #
-    # fs_emu_blending(True)
-    # glBindTexture(GL_TEXTURE_2D, Texture.bottom_bar)
-    # glColor4f(0.85, 0.85, 0.85, 0.85)
-    # glBegin(GL_QUADS)
-    # glTexCoord2f(0.0, 1.0)
-    # glVertex2f(State.gl_left, -1.0)
-    # glTexCoord2f(1.0, 1.0)
-    # glVertex2f(State.gl_right, -1.0)
-    # glTexCoord2f(1.0, 0.0)
-    # glVertex2f(State.gl_right, -0.75)
-    # glTexCoord2f(0.0, 0.0)
-    # glVertex2f(State.gl_left, -0.75)
-    # glEnd()
-    #
-    # top_mode = State.top_menu == State.navigatable
-    # config_mode = bool(State.config_menu)
-    #
-    # if top_mode:
-    #     strength = 0.4
-    # else:
-    #     strength = 1.0
-    #
-    #
-    # x = State.gl_left + 0.05
-    # y = -0.89
-    #
-    # title = State.current_menu.selected_item.title.upper()
-    # subtitle = State.current_menu.selected_item.subtitle.upper()
-    # supertitle = State.current_menu.selected_item.supertitle.upper()
-    #
-    # if supertitle:
-    #     tw, th = Render.text(supertitle, Font.title_font,
-    #             x, y, 0, shadow=True,
-    #             color=(1.0, 1.0, 1.0, 1.0 * strength))
-    #     x += tw + 0.03
-    # if title:
-    #     tw, th = Render.text(title, Font.title_font,
-    #             x, y, 0, shadow=True,
-    #             color=(1.0, 1.0, 1.0, 1.0 * strength))
-    #     x += tw + 0.03
-    # if subtitle:
-    #     tw, th = Render.text(subtitle, Font.title_font,
-    #             x, y, 0, shadow=True,
-    #             color=(1.0, 1.0, 1.0, 1.0 * strength))
-    #     x += tw + 0.03
-    #
-    # x = State.gl_left + 0.05
-    # y = -0.96
-    #
-    #
-    # options = {"dot": False,
-    #     "x": State.gl_left + 0.05,
-    #     "y": -0.96,
-    #     "texts": set()
-    # }
-    # def text(t, measure=None):
-    #     if not t:
-    #         return
-    #     if t in options["texts"]:
-    #         return
-    #     if options["dot"]:
-    #         tw, th = Render.text(u"\u00b7", Font.subtitle_font,
-    #                 options["x"], options["y"], 0, shadow=True,
-    #                 color=(1.0, 1.0, 1.0, 1.0 * strength * 0.25))
-    #         options["x"] += tw + 0.02
-    #     tw, th = Render.text(t, Font.subtitle_font,
-    #             options["x"], options["y"], 0, shadow=True,
-    #             color=(1.0, 1.0, 1.0, 1.0 * strength * 0.33))
-    #     if measure:
-    #         tw, th = Render.measure_text(measure, Font.subtitle_font)
-    #     options["x"] += tw + 0.02
-    #     options["dot"] = True
-    #     options["texts"].add(t)
-    #
-    # platform_text = str(getattr(State.current_menu.selected_item, "platform", "") or "").upper()
-    # text(platform_text)
-    #
-    # year_text = str(getattr(State.current_menu.selected_item, "year", "") or "").upper()
-    # text(year_text, measure="0000")
-    #
-    # publisher_text = (getattr(State.current_menu.selected_item, "publisher", "") or "").upper()
-    # for publisher_text in publisher_text.split("/"):
-    #     text(publisher_text.strip())
